@startuml Workout Plans Class Diagram
title Workout Plans Class Diagram
' ENUMS
enum SessionStatus {
  COMPLETED
  INCOMPLETE
}

' CLASS: Member (from external module)
class Member {

}

' CLASS: Exercise
class Exercise {
  -Long: id
  -String: name
  -String: equipment
  -String: primaryMuscleGroup
  -String: secondaryMuscleGroup
  -String: animationUrl
  --
  +createExercise()
  +updateExercise()
  +deleteExercise()
  +searchExercises()
}

' CLASS: Routine
class Routine {
  -Long: id
  -String: name
  -Long: memberId
  --
  +createRoutine()
  +renameRoutine()
  +addExerciseToRoutine()
  +removeExerciseFromRoutine()
  +deleteRoutine()
  +getRoutineSummaries()
  +getRoutineDetails()
}

' CLASS: RoutineExercise
class RoutineExercise {
  -Long: id
  -Integer: sets
  -Integer: reps
  -Long: routineId
  -Long: exerciseId
  --
  +assignExerciseToRoutine()
}

' CLASS: ExerciseLog
class ExerciseLog {
  -Long: id
  -Double: weight
  -SessionStatus: status
  -Long: sessionCounter
  -Long: memberId
  -Long: routineId
  -Long: exerciseId
  --
  +logSession()
  +getExerciseProgress()
}

' RELATIONSHIPS
Member "1" --> "*" Routine : owns
Routine "1" --> "*" RoutineExercise : contains
Exercise "1" --> "*" RoutineExercise : included in
Member "1" --> "*" ExerciseLog : logs
Routine "1" --> "*" ExerciseLog : associated with
Exercise "1" --> "*" ExerciseLog : performed in
' Explicit many-to-many relationship between Routine and Exercise
Routine "*" --> "*" Exercise : includes {via RoutineExercise}
@enduml